--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next-sanity": "^10.1.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-icons": "^5.5.0",
     "sanity": "^4.8.1",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1"
