--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.5",
     "sanity": "^4.8.1",
     "styled-components": "^6.1.19",
     "tailwind-merge": "^3.3.1",
