--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "motion": "^12.23.12",
     "next": "15.5.2",
     "next-sanity": "^10.1.4",
+    "razorpay": "^2.9.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
