--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sanity/client": "^7.12.0",
+    "@sanity/dashboard": "^5.0.0",
     "@sanity/image-url": "^1.2.0",
     "@sanity/vision": "^4.8.1",
     "@tailwindcss/line-clamp": "^0.4.4",
+    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -42,6 +44,7 @@
     "nodemailer": "^7.0.9",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
