--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sanity/client": "^7.12.0",
+    "@sanity/dashboard": "^5.0.0",
     "@sanity/image-url": "^1.2.0",
-    "@sanity/vision": "^4.8.1",
+    "@sanity/structure": "^2.36.2",
+    "@sanity/vision": "^4.11.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -40,27 +42,31 @@
     "next": "15.5.2",
     "next-sanity": "^10.1.4",
     "nodemailer": "^7.0.9",
+    "postcss": "^8.5.6",
     "razorpay": "^2.9.6",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
-    "sanity": "^4.8.1",
+    "recharts": "^3.3.0",
+    "sanity": "^4.11.0",
     "styled-components": "^6.1.19",
+    "swiper": "^12.0.3",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.15",
     "@types/node": "^20",
     "@types/nodemailer": "^7.0.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
+    "tailwindcss": "^4.1.15",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
