--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
-    "lint": "eslint",
+    "lint": "eslint . --ext .js,.ts,.jsx,.tsx",
     "typegen": "npx sanity@latest schema extract && npx sanity@latest typegen generate"
   },
   "dependencies": {
@@ -45,14 +45,9 @@
     "nodemailer": "^7.0.9",
     "postcss": "^8.5.6",
     "razorpay": "^2.9.6",
-<<<<<<< HEAD
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-=======
-    "react": "19.1.0",
     "react-chartjs-2": "^5.3.0",
-    "react-dom": "19.1.0",
->>>>>>> 62801aaac1fef1a194822957c2893a350f1aca1f
+    "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
