--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "motozoop",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -45,11 +48,9 @@
     "nodemailer": "^7.0.9",
     "postcss": "^8.5.6",
     "razorpay": "^2.9.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "react": "19.1.0",
-    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5",
